--- a/formularios/index.html
+++ b/formularios/index.html
@@ -6,6 +6,48 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <form action="/registro" method="post">
+    <p>
+      <label for="username">Nombre:</label>
+      <input type="text" name="username" id="username">
+    </p>
+    <p>
+      <label for="email">Correo:</label>
+      <input type="email" name="email" id="email">
+    </p>
+    <P>
+      <label for="phone">Telefono:</label>
+      <input type="tel" name="phone" id="phone">
+    </P>
+    <p>
+      <button type="reset">Cancelar</button><button type="submit">Enviar</button>
+    </p>
+    </form>
+  <form action="/contact" method="post">
+    <p>
+      <label for="comment">Deje su comentario:</label>
+    </p>
+    <p>
+      <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+    </p>
+    <p>
+      <button type="reset">Cancelar</button><button type="submit">Enviar</button>
+    </p>
+    </form>
+  <form action="/colors" method="get">
+    <label>Seleccione un color</label>
+    <select name="color">
+      <option value="#ff0000">Rojo</option>
+      <option value="#00ff00" selected>Verde</option>
+      <option value="#0000ff">Azul</option>
+      <option value="#770077">Morado</option>
+    </select>
+    <p>
+      <button type="reset">Cancelar</button><button type="submit">Enviar</button>
+    </p>
+  </form>
+  <form action="">
+
+  </form>
 </body>
 </html>
